# aqueduct

./: .gitignore  readme.md
appimage/: AppRun  aqueduct.desktop  make_appimage.sh
source/: CMakeLists.txt  assetbrowser.cpp  assetbrowser.h  assetlistview.cpp  assetlistview.h  assetviewmodel.cpp  assetviewmodel.h  librarybrowser.cpp  librarybrowser.h  libraryviewmodel.cpp  libraryviewmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
source/.cache/clangd/index/: assetbrowser.cpp.8F293FD83EAACF1B.idx  assetbrowser.h.597CE1B468D8C354.idx  assetlistview.cpp.4828D66B72E1EB0D.idx  assetlistview.h.B511770549CF8449.idx  assetviewmodel.cpp.8001F37B9228D674.idx  assetviewmodel.h.B3A0F80D176FA7FF.idx  librarybrowser.cpp.0CD4DFDD9777D75B.idx  librarybrowser.h.8205B19B19BB1F08.idx  libraryviewmodel.cpp.F1B86545AAF3DAD5.idx  libraryviewmodel.h.C43A1EB6DBF0BD9C.idx  main.cpp.F9F2A8DFEC00E5EF.idx  mainwindow.cpp.D4EF8ACD67C15D13.idx  mainwindow.h.C8C852519447872C.idx
source/qss/: default.qss
tests/example_library/materials/: Pink_Shader.blend
tests/example_library/models/: Icosphere.blend  Suzanne.blend
